# shared_json_client

./: README.md  pyproject.toml  setup.py
shared_json_client/: __init__.py  __main__.py  shared_json_client.py
tests/: sample.py  test_data_name.py  test_schema.py
