[build-system]
requires = ["setuptools"]

[project]
name = "shared_json_client"
description = "clinet fro shared json server"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

