[build-system]
requires = ["setuptools"]

[project]
name = "shared_json_client"
description = "clinet for shared json server"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
version = "2024.8.15"


[tool.setuptools.packages.find]
exclude = ["build", "tests"]

